fix landing page

--- a/src/application/modules/home/home.component.html
+++ b/src/application/modules/home/home.component.html
@@ -1,47 +1,67 @@
-<h1 class="ms-fontSize-xxl">Welcome <br><span class="ms-fontSize-l">to the PDR Global Planning</span></h1>
+<main class="ms-firstrun-instructionstep ms-u-slideDownIn20">  
 
-<!--<img src="http://placehold.it/350x200">
-
-
-<p class="ms-fontSize-m">This Addin performs the following steps:</p>
-
-<div class="ms-Grid">
-  <div class="ms-Grid-row">
-    <div class="ms-Grid-col ms-u-sm12 ">
-      <ul>
-        <li><span>1</span> Validates your GroupM CSI plan.</li>
-        <li><span>2</span> Allows access to Plan Status information.</li>
-        <li><span>3</span> Allows to access to other plan related features.</li>
-      </ul>
+  <section class="ms-firstrun-instructionstep__header">
+    <div class="ms-fontSize-xl ms-fontColor-themePrimary ">WELCOME</div>
+    <div class="ms-font-m ms-fontColor-themePrimary">
+      to the PDR Global Planning.
     </div>
+    <div class="ms-firstrun-instructionstep__header--image"></div>
+  </section>
+
+  <div class="ms-firstrun-instructionstep__welcome-body">
+    <p class="ms-font-s ms-fontColor-themePrimary ms-firstrun-instructionstep__welcome-intro">
+      This add-in performs the following steps:
+    </p>
+    <ul class="ms-List ms-firstrun-instructionstep__list">
+      <li class="ms-ListItem">
+        <span class="ms-ListItem-primaryText">1</span>
+        <span class="ms-ListItem-secondaryText">
+          <span class="ms-fontColor-themePrimary ">
+            <span class="ms-fontWeight-semibold ">
+              Validates your GroupM CSI plan.
+            </span>
+            <span>Lorem ipsum dolor sit amet, consectetur elit, sed.</span>
+          </span>
+        </span>
+        <div class="clearfix"></div>
+      </li>
+      <li class="ms-ListItem">
+        <span class="ms-ListItem-primaryText">2</span>
+        <span class="ms-ListItem-secondaryText">
+          <span class="ms-fontColor-themePrimary ">
+            <span class="ms-fontWeight-semibold">
+              Allows to Plan Status information.
+            </span>
+            <span>Lorem ipsum dolor sit amet.</span>
+          </span>
+        </span>
+        <div class="clearfix"></div>
+      </li>
+      <li class="ms-ListItem">
+        <span class="ms-ListItem-primaryText">3</span>
+        <span class="ms-ListItem-secondaryText">
+          <span class="ms-fontColor-themePrimary ">
+            <span class="ms-fontWeight-semibold">
+              Allows access to other plan related features.
+            </span>
+          </span>
+        </span>
+        <div class="clearfix"></div>
+      </li>
+    </ul>
   </div>
-</div>
 
-
-
-
-<div class="ms-Grid">
-  <div class="ms-Grid-row">
-    <div class="ms-Grid-col ms-u-sm12 ">
-      <div class="ms-u-textAlignCenter">
-        <button class="ms-Button ms-Button--primary">
-          <span class="ms-Button-label">Start planning!</span> 
-        </button>
-      </div>
-    </div>
+  <div class="container">
+    <p align="center">
+      <a [routerLink]="['/home']" class="ms-Button ms-Button--primary ms-Button--large">
+        <span class="ms-Button-label">Start Planning!</span>
+      </a>
+    </p>
+    <div class="space-10"></div>
+    <p align="center">
+      <a [routerLink]="['/other']" class="ms-Button ms-Button--primary ms-Button--large">
+        <span class="ms-Button-label">Take a tour</span>
+      </a>
+    </p>
   </div>
-</div>
-
-<div class="ms-Grid">
-  <div class="ms-Grid-row">
-    <div class="ms-Grid-col ms-u-sm12 ">
-      <div class="ms-u-textAlignCenter">
-        <button class="ms-Button ms-Button--primary">
-          <span class="ms-Button-label">Take a tour</span> 
-        </button>
-      </div>
-    </div>
-  </div>
-</div>-->
-
-
+</main>
